Make Packages/.gitattributes more specific
The attributes are specific to .m and .zwr files so use more specific
patterns.

Original-Change-Id: I1edaff5a92efd28da8975bc6d727b3868decb298

--- a/Packages/.gitattributes
+++ b/Packages/.gitattributes
@@ -1,1 +1,3 @@
-*               -whitespace
+# M routines and globals
+*.m             -whitespace
+*.zwr           -whitespace  hooks.MaxObjectKiB=0
