Subsume Packages/.gitattributes into top level .gitattributes
Remove this non-generated file from the VistA-FOIA Packages directory.

Change-Id: Icdabe16b21a9033261acf7ef6d0effa726fd8cbe

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,7 @@
 
 *                text=auto
 *                whitespace=tab-in-indent
+
+# M routines and globals
+*.m             -whitespace
+*.zwr           -whitespace  hooks.MaxObjectKiB=0
